# mini_text

./: .gitignore  Cargo.toml  README.md
src/: button.rs  cursor.rs  main.rs  rect.rs  rect.wgsl
